web-infras/parser/tests/fixtures/babel/typescript/interface/new-line/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,1)
1|interface
 |^
